キハ40　実装。まずは秋田と宇都宮。

--- a/thanks.txt
+++ b/thanks.txt
@@ -2,6 +2,7 @@
 ※50音順の並び・敬称略
 
 ☆☆☆運転台パネルご協力・制作☆☆☆
+	あすく
 	Bantetsu
 	ec207
 	oce283
@@ -9,6 +10,7 @@
 	狐憑き
 	ぐっち
 	ぐりぃん・しゃとる
+	Miso_yk
 	港の
 	森野めぐお
 
@@ -33,6 +35,7 @@
 	mackoy
 	oce283
 	かめ
+	すずはる
 	燕天使
 	ひっきー
 	港の
