気動車の警笛を変更

--- a/Rock_On/Train/JR/thanks.txt
+++ b/Rock_On/Train/JR/thanks.txt
@@ -1,34 +1,35 @@
-–{ì•i‚ÍˆÈ‰º‚ÌŠF—l‚Ì’˜ì•¨‚ðŠÜ‚ñ‚Å‚¨‚è‚Ü‚·B
-¦50‰¹‡‚Ì•À‚ÑEŒhÌ—ª
+æœ¬ä½œå“ã¯ä»¥ä¸‹ã®çš†æ§˜ã®è‘—ä½œç‰©ã‚’å«ã‚“ã§ãŠã‚Šã¾ã™ã€‚
+â€»50éŸ³é †ã®ä¸¦ã³ãƒ»æ•¬ç§°ç•¥
 
-™™™‰^“]‘äƒpƒlƒ‹‚²‹¦—ÍE§ì™™™
-	‚ ‚·‚­
-	‚¨[‚â‚Ü
+â˜†â˜†â˜†é‹è»¢å°ãƒ‘ãƒãƒ«ã”å”åŠ›ãƒ»åˆ¶ä½œâ˜†â˜†â˜†
+	ã‚ã™ã
+	ãŠãƒ¼ã‚„ã¾
 	Bantetsu
 	ec207
 	oce283
-	‹IˆÉ“ú’u
-	ŒÏœß‚«
-	‚®‚Á‚¿
-	‚®‚è‚¡‚ñE‚µ‚á‚Æ‚é
+	ç´€ä¼Šæ—¥ç½®
+	ç‹æ†‘ã
+	ãã£ã¡
+	ãã‚Šãƒã‚“ãƒ»ã—ã‚ƒã¨ã‚‹
 	Miso_yk
-	`‚Ì
-	X–ì‚ß‚®‚¨
+	æ¸¯ã®
+	æ£®é‡Žã‚ããŠ
 
-™™™ƒTƒEƒ“ƒh‚²‹¦—ÍE§ì™™™
+â˜†â˜†â˜†ã‚µã‚¦ãƒ³ãƒ‰ã”å”åŠ›ãƒ»åˆ¶ä½œâ˜†â˜†â˜†
 	Bantetsu
 	ec207
 	Hey
 	NT/fiv
 	oce283
-	‚©‚ß
-	‚·‚¸‚Í‚é
-	‰“VŽg
-	`‚Ì
-	X–ì‚ß‚®‚¨
+	ã‹ã‚
+	ã™ãšã¯ã‚‹
+	ç‡•å¤©ä½¿
+ã€€ã€€ç§€éœ°
+	æ¸¯ã®
+	æ£®é‡Žã‚ããŠ
 
-™™™ŽÔ—¼«”\‚²‹¦—ÍE§ì™™™
-	‚ ‚·‚­
+â˜†â˜†â˜†è»Šä¸¡æ€§èƒ½ã”å”åŠ›ãƒ»åˆ¶ä½œâ˜†â˜†â˜†
+	ã‚ã™ã
 	Bantetsu
 	ec207
 	Gikei
@@ -36,12 +37,12 @@
 	NT/fiv
 	mackoy
 	oce283
-	‚©‚ß
-	‚·‚¸‚Í‚é
-	‰“VŽg
-	‚Ð‚Á‚«[
-	`‚Ì
-	X–ì‚ß‚®‚¨
+	ã‹ã‚
+	ã™ãšã¯ã‚‹
+	ç‡•å¤©ä½¿
+	ã²ã£ããƒ¼
+	æ¸¯ã®
+	æ£®é‡Žã‚ããŠ
 
 
-½‚É—L‚è“ï‚¤ŒäÀ‚¢‚Ü‚·B
+èª ã«æœ‰ã‚Šé›£ã†å¾¡åº§ã„ã¾ã™ã€‚
